# python-project-lvl1

./: README.md  makefile  pyproject.toml  setup.cfg
brain_games/: cli.py  even.py  eveness.py
brain_games/games/: calc.py  calc_fun.py  even.py  gcd.py  logic.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
