[tool.poetry]
name = "EVERYDAY24_brain_games"
version = "0.2.0"
description = ""
authors = ["Vitalii Vorobev"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

